--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
 
 <script>
   window.EnvConfig = {
-    serverUrl: 'https://api.gptasst.net',
+    serverUrl: 'https://port.chinaeast.top',
     landPage: 'index',
     showRegInvite: 'show',
     appTheme: 'auto',
